manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp-service
  namespace: simple-webapp
  labels:
    app: flask
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: flask
