manifests/ingress.yaml
# # https://kubernetes.io/docs/concepts/services-networking/ingress/#tls

# apiVersion: v1
# kind: Secret
# metadata:
#   name: simple-webapp-tls
#   namespace: default
# type: kubernetes.io/tls
# # The TLS secret must contain keys named 'tls.crt' and 'tls.key' that contain the certificate and private key to use for TLS.
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEekNDQS9lZ0F3SUJBZ0lTQTRNcEFrbUVvd0FZaHpCTVVVYW90cnFITUEwR0NTcUdTSWIzRFFFQkN3VUEKTURNeEN6QUpCZ05WQkFZVEFsVlRNUll3RkFZRFZRUUtFdzFNWlhRbmN5QkZibU55ZVhCME1Rd3dDZ1lEVlFRRApFd05TTVRFd0hoY05NalF3TmpFME1UTXpNRE0xV2hjTk1qUXdPVEV5TVRNek1ETTBXakFxTVNnd0pnWURWUVFECkV4OXphVzF3YkdVdGQyVmlZWEJ3TG1oaGMyRnVhMkZ5WVdSdGFYSXVZMjl0TUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBcVJTZjA4R3ZlZThKZUdqY0h3NUREU01LTEdLUjI3aVlFMnA3UUgrVwozUmY2VFZNQ2toS3p [...]
#   tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQ3BGSi9Ud2E5NTd3bDQKYU53ZkRrTU5Jd29zWXBIYnVKZ1RhbnRBZjViZEYvcE5Vd0tTRXJOb1UzcnBTVWhBSzdLajVpSWRVQktYR1hJLwpTZml4Q3ZGQ1FpRThnVVU2SHBDaDlqSHY1MlZSNCsxSWI2Q3JySW43Vy83aVV5M1BPMm1UbmJaUkpjaGlSalpFCmpHN1FZTDZvRURzeDlTbjBJWDhXaXpVRnRhMzVPUFhtbnYxajlsTGxoREROSXVyN0ZXcUlHUlVLZGp1ZU12NjEKS1FKNXRFZnU0WFpZYWIraWRlRXlUcFNhQ1FDN21JV3lzQ2JMb2ZMNk9CS0pHc2U3WDJLRXFrSWRjQlpvaDNVZApZUzV5QjY0UzNpRmY [...]

# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: simple-webapp-ingress
  namespace: default
spec:
  # tls:
  # - hosts:
  #     - simple-webapp.hasankaradmir.com
  #   secretName: simple-webapp-tls
  rules:
  - host: simple-webapp.hasankaradmir.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-webapp-service
            port:
              number: 80
